<resources>
    <string name="app_name">Gigih_Final</string>
    <string name="menu_name">Menu Name</string>
    <string name="menu">Menu</string>
    <string name="flood">Flood</string>
    <string name="reports">Reports</string>
    <string name="earthquake">Earthquake</string>
    <string name="fire">Fire</string>
    <string name="haze">Haze</string>
    <string name="wind">Wind</string>
    <string name="volcano">Volcano</string>
    <string name="find_specific_area">Find Specific Area</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_description">Tracker App for Indonesian</string>
    <string name="icon">icon</string>
    <string name="dark_mode">Night Mode</string>
    <string name="period">Period</string>
    <string name="search_area">Search Area</string>
    <string name="all_report">Report all</string>
    <string name="latest_news_information">Latest News</string>
    <string name="latest_news">Latest news</string>
    <string name="refresh_button_description">Refresh Reports</string>
    <string name="alert">alert</string>
    <string name="app_ver">app ver</string>
    <string name="water_level_alert">Water Level Alert</string>
    <string name="water_level_alert_message">The water level has crossed the threshold!</string>

</resources>