<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.ReportFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mapFragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:node="replace" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/acTvSearchReport"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/search_area"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingHorizontal="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnReportRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/baseline_refresh_24"
            android:contentDescription="@string/refresh_button_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hsFilter" />

        <HorizontalScrollView
            android:id="@+id/hsFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="@id/acTvSearchReport"
            app:layout_constraintStart_toStartOf="@id/acTvSearchReport"
            app:layout_constraintTop_toBottomOf="@id/acTvSearchReport">

            <RadioGroup
                android:id="@+id/rgReport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/rbReportAll"
                    style="@style/Radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_report" />

                <RadioButton
                    android:id="@+id/rbReportFire"
                    style="@style/Radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fire" />

                <RadioButton
                    android:id="@+id/rbReportHaze"
                    style="@style/Radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/haze" />

                <RadioButton
                    android:id="@+id/rbReportWind"
                    style="@style/Radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind" />

                <RadioButton
                    android:id="@+id/rbReportFlood"
                    style="@style/Radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flood" />

                <RadioButton
                    android:id="@+id/rbReportEarthquake"
                    style="@style/Radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/earthquake" />

                <RadioButton
                    android:id="@+id/rbReportVolcano"
                    style="@style/Radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volcano" />
            </RadioGroup>
        </HorizontalScrollView>

        <ProgressBar
            android:id="@+id/loadingReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/btmSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_peekHeight="250dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <View
                android:id="@+id/drag_handle"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/drag_handle_background" />

            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest_news" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReportList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_report" />

        </LinearLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
